--- a/index.html
+++ b/index.html
@@ -3,68 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>MASTER RG - Mega System</title>
+    <title>MASTER RG - Rank System</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@700&display=swap" rel="stylesheet">
     <style>
-        :root { --neon: #00f2ff; --gold: #ffd700; --red: #ff4444; --bg: #000; }
+        :root { --neon: #00f2ff; --gold: #ffd700; --admin: #ff0055; --mod: #00ff88; --bg: #000; }
         * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; outline: none; }
         body { margin: 0; background: var(--bg); color: #fff; font-family: 'Cairo', sans-serif; overflow: hidden; }
 
-        /* شاشة الدخول المزدوجة */
-        #login-screen { position: fixed; inset: 0; background: #000; z-index: 10000; display: flex; align-items: center; justify-content: center; padding: 20px; }
-        .login-box { background: #111; padding: 25px; border-radius: 20px; border: 1px solid var(--neon); width: 100%; max-width: 360px; text-align: center; }
-        .tab-btn { background: #222; color: #fff; border: none; padding: 10px; width: 48%; border-radius: 8px; cursor: pointer; font-family: 'Cairo'; margin-bottom: 20px; }
-        .tab-btn.active { background: var(--neon); color: #000; font-weight: bold; }
+        /* الألوان حسب الرتبة */
+        .rank-الماستر { color: var(--gold) !important; text-shadow: 0 0 5px var(--gold); }
+        .rank-أدمن { color: var(--admin) !important; }
+        .rank-مشرف { color: var(--mod) !important; }
+        .rank-مميز { color: #bb86fc !important; }
+        .rank-عضو { color: #888 !important; }
 
-        /* الصفحات */
         .page { position: fixed; inset: 0; background: var(--bg); display: none; z-index: 10; }
-        .page.active { display: block; animation: slideIn 0.3s ease-out; }
-        @keyframes slideIn { from { opacity: 0; transform: scale(0.9); } to { opacity: 1; transform: scale(1); } }
-
-        /* تصميم الرومات (اللوبي) */
-        .lobby-container { display: grid; grid-template-columns: 1fr 1fr; gap: 15px; padding: 20px; padding-top: 70px; overflow-y: auto; height: 100vh; }
-        .room-card { background: #111; padding: 20px; border-radius: 15px; border: 1px solid #333; text-align: center; cursor: pointer; transition: 0.3s; }
-        .room-card:active { transform: translateY(-5px); border-color: var(--neon); }
-        .room-card i { font-size: 30px; display: block; margin-bottom: 10px; }
+        .page.active { display: block; }
 
         header { height: 60px; background: #111; border-bottom: 2px solid var(--neon); display: flex; justify-content: space-between; align-items: center; padding: 0 15px; position: sticky; top: 0; z-index: 100; }
+        .lobby-container { display: grid; grid-template-columns: 1fr 1fr; gap: 15px; padding: 20px; padding-top: 20px; overflow-y: auto; height: calc(100vh - 60px); }
+        .room-card { background: #111; padding: 20px; border-radius: 15px; border: 1px solid #333; text-align: center; cursor: pointer; }
+
         .chat-area { position: absolute; top: 60px; left: 0; right: 0; bottom: 80px; overflow-y: auto; padding: 10px; background: #050505; }
-
-        /* القائمة الجانبية (المتواجدين والملف) */
-        .sidebar { position: fixed; top: 0; bottom: 0; right: -320px; width: 300px; background: #0a0a0a; z-index: 2000; padding: 20px; transition: 0.3s ease; border-left: 2px solid var(--neon); overflow-y: auto; }
-        .sidebar.active { right: 0; }
-        .user-item { display: flex; align-items: center; padding: 8px; border-bottom: 1px solid #222; font-size: 13px; }
-        .status-dot { width: 8px; height: 8px; background: #0f0; border-radius: 50%; margin-left: 8px; }
-
         .msg { display: flex; margin-bottom: 12px; cursor: pointer; }
-        .msg img { width: 42px; height: 42px; border-radius: 8px; border: 1.5px solid var(--neon); margin-left: 10px; object-fit: cover; }
-        .user-n { font-size: 12px; color: var(--neon); font-weight: bold; }
-        .user-t { background: #1a1a1a; padding: 8px 12px; border-radius: 12px; margin-top: 4px; display: inline-block; max-width: 80%; }
+        .msg img { width: 42px; height: 42px; border-radius: 8px; border: 2px solid #333; margin-left: 10px; object-fit: cover; }
+        .user-n { font-size: 13px; font-weight: bold; margin-bottom: 2px; }
+
+        /* نافذة التحكم بالرتب */
+        #user-modal { position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%) scale(0); background: #111; border: 2px solid var(--neon); padding: 20px; border-radius: 20px; z-index: 5000; width: 85%; max-width: 320px; text-align: center; transition: 0.2s; }
+        #user-modal.active { transform: translate(-50%, -50%) scale(1); }
+        .rank-btn { width: 100%; padding: 8px; margin: 4px 0; border-radius: 8px; border: none; font-weight: bold; cursor: pointer; font-family: 'Cairo'; }
 
         .footer { position: absolute; bottom: 0; left: 0; right: 0; height: 80px; background: #111; display: flex; align-items: center; padding: 15px; }
         #msgInp { flex: 1; background: #000; border: 1px solid #333; color: #fff; padding: 12px; border-radius: 10px; text-align: right; }
-        
+        .sidebar { position: fixed; top: 0; bottom: 0; right: -320px; width: 300px; background: #0a0a0a; z-index: 2000; padding: 20px; transition: 0.3s ease; border-left: 2px solid var(--neon); }
+        .sidebar.active { right: 0; }
         #overlay { position: fixed; inset: 0; background: rgba(0,0,0,0.8); z-index: 1500; display: none; }
     </style>
 </head>
 <body>
 
-<div id="login-screen">
-    <div class="login-box">
-        <h2 style="color:var(--neon); margin-bottom: 15px;">دخول الإمبراطورية</h2>
-        <div style="display: flex; justify-content: space-between;">
-            <button id="z-tab" class="tab-btn active" onclick="setTab('z')">زائر</button>
-            <button id="o-tab" class="tab-btn" onclick="setTab('o')">حساب مسجل</button>
-        </div>
-        <input type="text" id="logName" placeholder="الاسم المستعار" style="width:100%; padding:10px; margin-bottom:10px; background:#000; border:1px solid #444; color:#fff; border-radius:8px;">
-        <div id="extra-fields" style="display:none;">
-            <input type="text" id="logEmail" placeholder="البريد الإلكتروني" style="width:100%; padding:10px; margin-bottom:10px; background:#000; border:1px solid #444; color:#fff; border-radius:8px;">
-            <input type="password" id="logPass" placeholder="كلمة السر" style="width:100%; padding:10px; margin-bottom:10px; background:#000; border:1px solid #444; color:#fff; border-radius:8px;">
-        </div>
-        <button onclick="doEntry()" style="width:100%; background:var(--neon); border:none; padding:12px; border-radius:10px; font-weight:bold;">دخول الدردشة 🚀</button>
+<div id="user-modal">
+    <h3 id="target-user" style="margin-bottom: 15px;">إدارة العضو</h3>
+    <div id="admin-tools">
+        <button class="rank-btn" style="background:var(--admin);" onclick="setRank('أدمن')">ترقية لـ أدمن 🛡️</button>
+        <button class="rank-btn" style="background:var(--mod);" onclick="setRank('مشرف')">ترقية لـ مشرف ⭐</button>
+        <button class="rank-btn" style="background:#bb86fc;" onclick="setRank('مميز')">عضو مميز 💎</button>
+        <button class="rank-btn" style="background:#888;" onclick="setRank('عضو')">تنزيل لـ عضو 👤</button>
+        <hr>
+        <button class="rank-btn" style="background:red; color:white;" onclick="kickUser()">طرد نهائي ⛔</button>
     </div>
+    <button onclick="closeModal()" style="margin-top:10px; background:none; border:none; color:#fff;">إغلاق</button>
 </div>
 
 <div id="lobby-page" class="page active">
@@ -74,37 +65,33 @@
         <button onclick="toggleSidebar()" style="background:var(--neon); border:none; padding:7px 12px; border-radius:8px; font-weight:bold;">الملف</button>
     </header>
     <div class="lobby-container">
-        <div class="room-card" onclick="openRoom('main', '👑 عرش الإمبراطورية')"><i>🏛</i><b>العرش</b></div>
-        <div class="room-card" onclick="openRoom('vip', '💎 ديوان الماستر')"><i>💎</i><b>الديوان</b></div>
-        <div class="room-card" onclick="openRoom('elite', '🤝 ملتقى النخبة')"><i>🤝</i><b>النخبة</b></div>
-        <div class="room-card" onclick="openRoom('game', '🏆 ميدان المسابقات')"><i>🏆</i><b>المسابقات</b></div>
-        <div class="room-card" onclick="openRoom('poem', '🎸 ركن القوافي')"><i>🎸</i><b>شعر</b></div>
-        <div class="room-card" onclick="openRoom('cafe', '☕ مقهى الذكريات')"><i>☕</i><b>المقهى</b></div>
+        <div class="room-card" onclick="openRoom('main', '👑 العرش')">🏛<b>العرش</b></div>
+        <div class="room-card" onclick="openRoom('vip', '💎 الديوان')">💎<b>الديوان</b></div>
+        <div class="room-card" onclick="openRoom('game', '🏆 المسابقات')">🏆<b>المسابقات</b></div>
+        <div class="room-card" onclick="openRoom('elite', '🤝 النخبة')">🤝<b>النخبة</b></div>
+        <div class="room-card" onclick="openRoom('poem', '🎸 الشعر')">🎸<b>الشعر</b></div>
+        <div class="room-card" onclick="openRoom('cafe', '☕ المقهى')">☕<b>المقهى</b></div>
     </div>
 </div>
 
 <div id="chat-page" class="page">
     <header>
         <button onclick="goBack()" style="background:none; border:none; color:var(--neon); font-size:20px;">➔</button>
-        <b id="room-name-display" style="color:var(--gold); font-size:14px;"></b>
-        <button onclick="toggleSidebar()" style="background:var(--neon); border:none; padding:5px 10px; border-radius:8px; font-size:12px;">المتصلين</button>
+        <b id="room-name-display" style="color:var(--gold);"></b>
+        <div style="width:50px"></div>
     </header>
     <div id="chat-messages" class="chat-area"></div>
     <div class="footer">
-        <input type="text" id="msgInp" placeholder="اكتب رسالتك...">
-        <button onclick="sendMsg()" style="background:var(--neon); border:none; padding:10px 15px; border-radius:10px; margin-right:5px; font-weight:bold;">إرسال</button>
+        <input type="text" id="msgInp" placeholder="اكتب شيئاً...">
+        <button onclick="sendMsg()" style="background:var(--neon); padding:10px 15px; border:none; border-radius:10px; font-weight:bold; margin-right:5px;">إرسال</button>
     </div>
 </div>
 
-<div id="overlay" onclick="toggleSidebar()"></div>
+<div id="overlay" onclick="toggleSidebar(); closeModal();"></div>
 <div id="sidebar" class="sidebar">
-    <div style="background:#111; padding:15px; border-radius:10px; margin-bottom:20px;">
-        <h4 style="margin:0; color:var(--neon)">👤 ملفي</h4>
-        <input type="file" accept="image/*" onchange="upImg(this)" style="font-size:10px; margin-top:10px;">
-        <button onclick="localStorage.clear(); location.reload();" style="width:100%; background:red; border:none; color:#fff; padding:8px; border-radius:5px; margin-top:10px; font-family:'Cairo';">خروج</button>
-    </div>
-    <h4 style="color:var(--gold); border-bottom:1px solid #333;">🟢 المتواجدون الآن</h4>
-    <div id="user-list"></div>
+    <h4 style="color:var(--neon)">الملف الشخصي</h4>
+    <p id="my-rank-display" style="font-size: 12px; color: var(--gold);"></p>
+    <button onclick="localStorage.clear(); location.reload();" style="width:100%; padding:10px; background:red; border:none; color:white; border-radius:8px; font-family:'Cairo';">تسجيل الخروج</button>
 </div>
 
 <script>
@@ -112,52 +99,20 @@
     firebase.initializeApp(config);
     const db = firebase.database();
 
-    let mode = 'z';
     let my = {
-        n: localStorage.getItem('rg-n') || "",
-        i: localStorage.getItem('rg-i') || "https://ui-avatars.com/api/?background=00f2ff&color=000&name=U",
-        logged: localStorage.getItem('rg-logged') || "false"
+        n: localStorage.getItem('rg-n') || "زائر_" + Math.floor(Math.random()*999),
+        r: localStorage.getItem('rg-r') || "عضو", // الرتبة الافتراضية
+        i: localStorage.getItem('rg-i') || "https://ui-avatars.com/api/?background=333&color=fff&name=U"
     };
 
+    // الماستر الحقيقي يحصل على رتبة الماستر تلقائياً
+    if(my.n.includes("الماستر")) my.r = "الماستر";
+
     let currentRoom = "";
-
-    if(my.logged === "true") {
-        document.getElementById('login-screen').style.display = 'none';
-        updateOnlineStatus();
-    }
-
-    function setTab(t) {
-        mode = t;
-        document.getElementById('z-tab').classList.toggle('active', t==='z');
-        document.getElementById('o-tab').classList.toggle('active', t==='o');
-        document.getElementById('extra-fields').style.display = t === 'o' ? 'block' : 'none';
-    }
-
-    function doEntry() {
-        let n = document.getElementById('logName').value;
-        if(n.length < 2) return alert("الاسم قصير!");
-        localStorage.setItem('rg-n', n);
-        localStorage.setItem('rg-logged', "true");
-        location.reload();
-    }
-
-    function updateOnlineStatus() {
-        let userRef = db.ref('online_users/' + my.n);
-        userRef.set({ name: my.n, img: my.i });
-        userRef.onDisconnect().remove();
-    }
-
-    db.ref('online_users').on('value', snap => {
-        let list = document.getElementById('user-list');
-        list.innerHTML = "";
-        snap.forEach(user => {
-            let u = user.val();
-            list.innerHTML += `<div class="user-item"><div class="status-dot"></div> ${u.name}</div>`;
-        });
-    });
+    let selectedUser = "";
 
     function openRoom(roomId, roomName) {
-        if(roomId === 'vip' && !my.n.includes("الماستر")) return alert("هذا الديوان للملوك فقط! 💎");
+        if(roomId === 'vip' && my.r !== 'الماستر' && my.r !== 'أدمن') return alert("هذا الديوان للملوك والأدمنية فقط!");
         currentRoom = roomId;
         document.getElementById('room-name-display').innerText = roomName;
         document.getElementById('lobby-page').classList.remove('active');
@@ -166,44 +121,64 @@
         loadMessages();
     }
 
-    function goBack() {
-        document.getElementById('chat-page').classList.remove('active');
-        document.getElementById('lobby-page').classList.add('active');
-        db.ref('rooms/' + currentRoom).off();
-    }
-
     function sendMsg() {
         let t = document.getElementById('msgInp').value;
         if(t.trim()) {
-            db.ref('rooms/' + currentRoom).push({ u: my.n, i: my.i, t: t, time: Date.now() });
+            db.ref('rooms/' + currentRoom).push({ u: my.n, r: my.r, i: my.i, t: t });
             document.getElementById('msgInp').value = '';
         }
     }
 
     function loadMessages() {
+        db.ref('rooms/' + currentRoom).off();
         db.ref('rooms/' + currentRoom).limitToLast(40).on('child_added', snap => {
             let m = snap.val();
             let div = document.createElement('div');
             div.className = 'msg';
-            div.innerHTML = `<img src="${m.i}"><div><div class="user-n">${m.u} ${m.u.includes("الماستر")?'👑':''}</div><div class="user-t">${m.t}</div></div>`;
+            div.onclick = () => openControl(m.u);
+            div.innerHTML = `<img src="${m.i}" style="border-color:${getRankColor(m.r)}">
+                <div>
+                    <div class="user-n rank-${m.r}">${m.u} [${m.r}]</div>
+                    <div class="user-t">${m.t}</div>
+                </div>`;
             document.getElementById('chat-messages').appendChild(div);
             document.getElementById('chat-messages').scrollTop = document.getElementById('chat-messages').scrollHeight;
         });
     }
 
-    function upImg(input) {
-        if (input.files && input.files[0]) {
-            let reader = new FileReader();
-            reader.onload = function(e) { localStorage.setItem('rg-i', e.target.result); alert("تم حفظ الصورة!"); location.reload(); };
-            reader.readAsDataURL(input.files[0]);
-        }
+    function getRankColor(r) {
+        if(r==='الماستر') return '#ffd700';
+        if(r==='أدمن') return '#ff0055';
+        if(r==='مشرف') return '#00ff88';
+        return '#333';
     }
 
-    function toggleSidebar() {
-        let s = document.getElementById('sidebar');
-        let o = document.getElementById('overlay');
-        s.classList.toggle('active');
-        o.style.display = s.classList.contains('active') ? 'block' : 'none';
+    function openControl(userName) {
+        if(my.r !== 'الماستر') return; // فقط الماستر يغير الرتب
+        if(userName === my.n) return;
+        selectedUser = userName;
+        document.getElementById('target-user').innerText = "إدارة: " + userName;
+        document.getElementById('user-modal').classList.add('active');
+        document.getElementById('overlay').style.display = 'block';
+    }
+
+    function setRank(newRank) {
+        db.ref('rooms/' + currentRoom).push({ u: "📢 النظام", t: `تمت ترقية [${selectedUser}] إلى رتبة [${newRank}]` });
+        closeModal();
+    }
+
+    function goBack() { 
+        document.getElementById('chat-page').classList.remove('active');
+        document.getElementById('lobby-page').classList.add('active');
+    }
+
+    function toggleSidebar() { document.getElementById('sidebar').classList.toggle('active'); document.getElementById('overlay').style.display = 'block'; }
+    function closeModal() { document.getElementById('user-modal').classList.remove('active'); document.getElementById('overlay').style.display = 'none'; }
+    
+    // حفظ الاسم لأول مرة إذا لم يكن موجوداً
+    if(!localStorage.getItem('rg-n')) {
+        let name = prompt("ادخل اسمك:");
+        if(name) { localStorage.setItem('rg-n', name); location.reload(); }
     }
 </script>
 </body>
