--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>MASTER RG - Full System v10</title>
+    <title>MASTER RG - Global Bot</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@700&display=swap" rel="stylesheet">
@@ -12,32 +12,27 @@
         * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; outline: none; }
         body { margin: 0; background: var(--bg); color: #fff; font-family: 'Cairo', sans-serif; overflow: hidden; position: fixed; width: 100%; height: 100%; }
 
-        /* الصفحات */
+        header { height: 60px; background: #111; border-bottom: 2px solid var(--neon); display: flex; justify-content: space-between; align-items: center; padding: 0 15px; z-index: 100; }
         .page { position: fixed; inset: 0; background: var(--bg); display: none; z-index: 10; }
         .page.active { display: block; }
 
-        header { height: 60px; background: #111; border-bottom: 2px solid var(--neon); display: flex; justify-content: space-between; align-items: center; padding: 0 15px; z-index: 100; }
         .lobby-container { display: grid; grid-template-columns: 1fr 1fr; gap: 12px; padding: 15px; overflow-y: auto; height: calc(100vh - 60px); }
         .room-card { background: #111; padding: 15px; border-radius: 12px; border: 1px solid #333; text-align: center; cursor: pointer; }
-        
-        /* الدردشة */
+
         .chat-area { position: absolute; top: 60px; left: 0; right: 0; bottom: 80px; overflow-y: auto; padding: 10px; background: #050505; }
         .msg { display: flex; margin-bottom: 12px; }
-        .msg img { width: 42px; height: 42px; border-radius: 8px; border: 2px solid #222; margin-left: 10px; object-fit: cover; }
-        .user-n { font-size: 13px; font-weight: bold; margin-bottom: 2px; }
-        .user-t { background: #1a1a1a; padding: 10px; border-radius: 12px; line-height: 1.4; max-width: 85%; }
-        .yt-frame { width: 100%; aspect-ratio: 16/9; margin-top: 8px; border-radius: 8px; border: 1px solid var(--neon); }
-
-        /* القائمة الجانبية (المتصلين والبروفايل) */
-        .sidebar { position: fixed; top: 0; bottom: 0; right: -300px; width: 280px; background: #0a0a0a; z-index: 2000; padding: 20px; transition: 0.3s; border-left: 2px solid var(--neon); overflow-y: auto; }
-        .sidebar.active { right: 0; }
-        .box-section { background: #111; padding: 12px; border-radius: 12px; margin-bottom: 15px; border: 1px solid #222; }
-        .user-row { display: flex; align-items: center; padding: 8px 0; border-bottom: 1px solid #1a1a1a; font-size: 13px; }
-        .dot { width: 8px; height: 8px; background: #0f0; border-radius: 50%; margin-left: 10px; box-shadow: 0 0 5px #0f0; }
+        .msg img { width: 42px; height: 42px; border-radius: 8px; border: 2px solid #222; margin-left: 10px; }
+        .user-n { font-size: 13px; font-weight: bold; }
+        .user-t { background: #1a1a1a; padding: 10px; border-radius: 12px; max-width: 85%; line-height: 1.4; word-wrap: break-word; }
+        .bot-msg { border: 1px solid var(--gold) !important; background: #2a2200 !important; color: var(--gold); }
 
         .footer { position: absolute; bottom: 0; left: 0; right: 0; height: 80px; background: #111; display: flex; align-items: center; padding: 15px; border-top: 1px solid #222; }
-        #msgInp { flex: 1; background: #000; border: 1px solid #333; color: #fff; padding: 12px; border-radius: 10px; text-align: right; font-family: 'Cairo'; }
+        #msgInp { flex: 1; background: #000; border: 1px solid #333; color: #fff; padding: 12px; border-radius: 10px; text-align: right; }
         .send-btn { background: var(--neon); color: #000; border: none; padding: 10px 15px; border-radius: 10px; margin-right: 8px; font-weight: bold; }
+
+        /* القائمة الجانبية */
+        .sidebar { position: fixed; top: 0; bottom: 0; right: -300px; width: 280px; background: #0a0a0a; z-index: 2000; padding: 20px; transition: 0.3s; border-left: 2px solid var(--neon); }
+        .sidebar.active { right: 0; }
         #overlay { position: fixed; inset: 0; background: rgba(0,0,0,0.8); z-index: 1500; display: none; }
     </style>
 </head>
@@ -46,53 +41,40 @@
 <div id="lobby-page" class="page active">
     <header>
         <button onclick="toggleSidebar()" style="background:var(--neon); border:none; padding:7px 12px; border-radius:8px; font-weight:bold;">☰ القائمة</button>
-        <b style="color:var(--neon); font-size: 18px;">MASTER RG 👑</b>
+        <b style="color:var(--neon)">MASTER RG 👑</b>
         <div style="width:60px"></div>
     </header>
     <div class="lobby-container">
-        <div class="room-card" onclick="openRoom('main', '👑 العرش')">🏛<br><b>العرش</b></div>
-        <div class="room-card" onclick="openRoom('game', '🏆 المسابقات')">🏆<br><b>المسابقات</b></div>
-        <div class="room-card" onclick="openRoom('vip', '💎 الديوان')">💎<br><b>الديوان</b></div>
-        <div class="room-card" onclick="openRoom('elite', '🤝 النخبة')">🤝<br><b>النخبة</b></div>
-        <div class="room-card" onclick="openRoom('poem', '🎸 الشعر')">🎸<br><b>الشعر</b></div>
-        <div class="room-card" onclick="openRoom('cafe', '☕ المقهى')">☕<br><b>المقهى</b></div>
-        <div class="room-card" style="grid-column: span 2; border-color:var(--gold)" onclick="showSocial()">📸 <b>حائط الإمبراطورية الاجتماعي</b></div>
+        <div class="room-card" onclick="openRoom('main', '👑 العرش')">🏛 العرش</div>
+        <div class="room-card" onclick="openRoom('game', '🏆 المسابقات')">🏆 المسابقات</div>
+        <div class="room-card" onclick="openRoom('vip', '💎 الديوان')">💎 الديوان</div>
+        <div class="room-card" onclick="openRoom('elite', '🤝 النخبة')">🤝 النخبة</div>
+        <div class="room-card" onclick="openRoom('poem', '🎸 الشعر')">🎸 الشعر</div>
+        <div class="room-card" onclick="openRoom('cafe', '☕ المقهى')">☕ المقهى</div>
     </div>
 </div>
 
 <div id="chat-page" class="page">
     <header>
         <button onclick="goBack()" style="background:none; border:none; color:var(--neon); font-size:22px;">➔</button>
-        <b id="room-name-display" style="color:var(--gold); font-size: 14px;"></b>
-        <button onclick="toggleSidebar()" id="online-btn" style="background:#222; border:none; color:#fff; padding:5px 10px; border-radius:8px; font-size:11px;">0 متصل</button>
+        <b id="room-name-display" style="color:var(--gold);"></b>
+        <div id="online-btn" style="color:var(--neon); font-size:12px;">● 0</div>
     </header>
     <div id="chat-messages" class="chat-area"></div>
     <div class="footer">
-        <input type="text" id="msgInp" placeholder="رسالة أو رابط يوتيوب...">
+        <input type="text" id="msgInp" placeholder="اكتب 'سؤال' لتحدي البوت...">
         <button onclick="sendMsg()" class="send-btn">إرسال</button>
     </div>
 </div>
 
-<div id="social-page" class="page">
-    <header>
-        <button onclick="goBack()" style="background:none; border:none; color:var(--neon); font-size:22px;">➔</button>
-        <b style="color:var(--gold);">الحائط الاجتماعي 📸</b>
-        <button onclick="newPost()" style="background:var(--neon); border:none; padding:5px 10px; border-radius:8px;">نشر +</button>
-    </header>
-    <div id="social-container" style="overflow-y:auto; height:calc(100vh - 60px); padding:10px;"></div>
-</div>
-
 <div id="overlay" onclick="toggleSidebar()"></div>
 <div id="sidebar" class="sidebar">
-    <div class="box-section">
-        <h4 style="margin:0; color:var(--neon)">👤 الملف الشخصي</h4>
-        <div style="font-size:13px; margin-top:10px;">الاسم: <span id="ui-my-n" style="color:var(--gold)"></span></div>
-        <div style="font-size:11px; color:var(--neon)">المستوى: <span id="ui-my-lv">1</span></div>
-        <input type="file" accept="image/*" onchange="upImg(this)" style="font-size:10px; margin-top:10px; width:100%;">
-        <button onclick="localStorage.clear(); location.reload();" style="width:100%; margin-top:10px; background:red; border:none; color:white; padding:7px; border-radius:8px;">تسجيل خروج</button>
+    <h4 style="color:var(--neon)">👤 الملف الشخصي</h4>
+    <div id="my-info" style="font-size:13px; margin-bottom:20px;">
+        الاسم: <span id="my-name-val" style="color:var(--gold)"></span><br>
+        المستوى: <span id="my-lv-val" style="color:var(--neon)"></span>
     </div>
-    <h4 style="color:var(--gold); border-bottom:1px solid #333; padding-bottom:5px;">🟢 المتواجدون الآن</h4>
-    <div id="user-list-box"></div>
+    <button onclick="localStorage.clear(); location.reload();" style="width:100%; padding:10px; background:red; border:none; color:white; border-radius:8px;">خروج</button>
 </div>
 
 <script>
@@ -102,43 +84,27 @@
 
     let my = {
         n: localStorage.getItem('rg-n') || "",
-        i: localStorage.getItem('rg-i') || "https://ui-avatars.com/api/?background=333&color=fff&name=U",
-        xp: parseInt(localStorage.getItem('rg-xp')) || 0
+        xp: parseInt(localStorage.getItem('rg-xp')) || 0,
+        i: "https://ui-avatars.com/api/?background=333&color=fff&name=U"
     };
 
     if(!my.n) {
-        let name = prompt("ادخل اسمك الملكي:");
+        let name = prompt("ادخل اسمك:");
         if(name) { localStorage.setItem('rg-n', name); location.reload(); }
     }
-    document.getElementById('ui-my-n').innerText = my.n;
-    document.getElementById('ui-my-lv').innerText = Math.floor(my.xp / 50) + 1;
+    document.getElementById('my-name-val').innerText = my.n;
+    document.getElementById('my-lv-val').innerText = Math.floor(my.xp / 50) + 1;
 
     let currentRoom = "";
+    let currentAnswer = "";
 
-    // نظام المتصلين (Presence)
-    function updatePresence() {
-        let ref = db.ref('online_users/' + my.n);
-        ref.set({ n: my.n, i: my.i });
-        ref.onDisconnect().remove();
-    }
-    updatePresence();
-
-    db.ref('online_users').on('value', snap => {
-        let box = document.getElementById('user-list-box');
-        box.innerHTML = "";
-        let count = 0;
-        snap.forEach(u => {
-            count++;
-            box.innerHTML += `<div class="user-row"><div class="dot"></div> ${u.val().n}</div>`;
-        });
-        document.getElementById('online-btn').innerText = count + " متصل";
-    });
-
-    function getYoutubeId(url) {
-        const regExp = /^.*(youtu.be\/|v\/|u\/\w\/|embed\/|watch\?v=|\&v=)([^#\&\?]*).*/;
-        const match = url.match(regExp);
-        return (match && match[2].length === 11) ? match[2] : null;
-    }
+    const questions = [
+        { q: "ما هي عاصمة العراق؟", a: "بغداد" },
+        { q: "من هو مؤسس الدولة الأموية؟", a: "معاوية" },
+        { q: "ما هو أسرع حيوان في العالم؟", a: "الفهد" },
+        { q: "كم عدد أركان الإسلام؟", a: "5" },
+        { q: "ما هو الشيء الذي يكسو الناس وهو عارٍ؟", a: "الابرة" }
+    ];
 
     function openRoom(roomId, roomName) {
         currentRoom = roomId;
@@ -148,75 +114,48 @@
         loadMessages();
     }
 
-    function showSocial() {
-        document.getElementById('lobby-page').classList.remove('active');
-        document.getElementById('social-page').classList.add('active');
-        loadPosts();
-    }
-
     function sendMsg() {
-        let t = document.getElementById('msgInp').value;
-        if(!t.trim()) return;
-        db.ref('rooms/' + currentRoom).push({ u: my.n, i: my.i, t: t, lv: Math.floor(my.xp/50)+1 });
-        my.xp += 5; localStorage.setItem('rg-xp', my.xp);
+        let t = document.getElementById('msgInp').value.trim();
+        if(!t) return;
+
+        if (currentAnswer !== "" && t === currentAnswer) {
+            db.ref('rooms/' + currentRoom).push({ u: "🤖 بوت الإمبراطورية", t: `👑 كفو يا ${my.n}! جوابك صح [${t}]. زادت نقاطك!`, isBot: true });
+            my.xp += 10;
+            localStorage.setItem('rg-xp', my.xp);
+            currentAnswer = "";
+        } else if (t === "سؤال" || t === "بوت") {
+            let q = questions[Math.floor(Math.random() * questions.length)];
+            currentAnswer = q.a;
+            db.ref('rooms/' + currentRoom).push({ u: "🤖 بوت الإمبراطورية", t: `💡 سؤال للجميع: ${q.q}`, isBot: true });
+        } else {
+            db.ref('rooms/' + currentRoom).push({ u: my.n, t: t, i: my.i, lv: Math.floor(my.xp/50)+1 });
+        }
         document.getElementById('msgInp').value = '';
     }
 
     function loadMessages() {
         db.ref('rooms/' + currentRoom).off();
-        let chatBox = document.getElementById('chat-messages');
-        chatBox.innerHTML = "";
-        db.ref('rooms/' + currentRoom).limitToLast(30).on('child_added', snap => {
+        let box = document.getElementById('chat-messages');
+        box.innerHTML = "";
+        db.ref('rooms/' + currentRoom).limitToLast(25).on('child_added', snap => {
             let m = snap.val();
-            let ytId = getYoutubeId(m.t);
             let div = document.createElement('div');
             div.className = 'msg';
-            let content = `<div class="user-t">${m.t}`;
-            if(ytId) content += `<iframe class="yt-frame" src="https://www.youtube.com/embed/${ytId}" frameborder="0" allowfullscreen></iframe>`;
-            content += `</div>`;
-            div.innerHTML = `<img src="${m.i}"><div><div class="user-n" style="color:var(--neon)">${m.u} <small style="color:var(--gold)">Lv.${m.lv||1}</small></div>${content}</div>`;
-            chatBox.appendChild(div);
-            chatBox.scrollTop = chatBox.scrollHeight;
-        });
-    }
-
-    function newPost() {
-        let txt = prompt("اكتب منشورك:");
-        let img = prompt("رابط صورة:");
-        if(txt) db.ref('posts').push({ u: my.n, t: txt, img: img });
-    }
-
-    function loadPosts() {
-        db.ref('posts').on('value', snap => {
-            let box = document.getElementById('social-container');
-            box.innerHTML = "";
-            snap.forEach(pSnap => {
-                let p = pSnap.val();
-                box.innerHTML += `<div style="background:#111; border-radius:12px; margin-bottom:15px; border:1px solid #222; overflow:hidden;">
-                    ${p.img ? `<img src="${p.img}" style="width:100%;">` : ''}
-                    <div style="padding:10px;"><b style="color:var(--neon)">${p.u}</b><p>${p.t}</p></div>
+            div.innerHTML = `
+                <img src="${m.isBot ? 'https://cdn-icons-png.flaticon.com/512/4712/4712035.png' : m.i}">
+                <div>
+                    <div class="user-n" style="color:${m.isBot?'var(--gold)':'var(--neon)'}">${m.u} ${m.lv?`[Lv.${m.lv}]`:''}</div>
+                    <div class="user-t ${m.isBot?'bot-msg':''}">${m.t}</div>
                 </div>`;
-            });
+            box.appendChild(div);
+            box.scrollTop = box.scrollHeight;
         });
     }
 
-    function upImg(input) {
-        if (input.files && input.files[0]) {
-            let reader = new FileReader();
-            reader.onload = function(e) { localStorage.setItem('rg-i', e.target.result); location.reload(); };
-            reader.readAsDataURL(input.files[0]);
-        }
-    }
-
-    function goBack() { 
-        document.querySelectorAll('.page').forEach(p => p.classList.remove('active'));
-        document.getElementById('lobby-page').classList.add('active');
-    }
-
+    function goBack() { document.getElementById('chat-page').classList.remove('active'); document.getElementById('lobby-page').classList.add('active'); }
     function toggleSidebar() { 
-        let s = document.getElementById('sidebar');
-        s.classList.toggle('active');
-        document.getElementById('overlay').style.display = s.classList.contains('active') ? 'block' : 'none';
+        document.getElementById('sidebar').classList.toggle('active');
+        document.getElementById('overlay').style.display = document.getElementById('sidebar').classList.contains('active') ? 'block' : 'none';
     }
 </script>
 </body>
